# x64dbg-linux

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  cmake.toml  script-plan.md  test-framework-proposal.md
.github/format/: AStyleHelper.exe.config  AStyleHelper.py  README.md  pre-commit
.github/workflows/: build.yml  cross.yml  format.yml
cmake/: FindQt5.cmake  deps.cmake  release.cmake
docs/commands/breakpoint-control/: SetMemoryRangeBPX.md
docs/commands/general-purpose/: movdqu.md  vmovdqu.md
docs/commands/plugins/: plugload.md
docs/commands/script/: scriptrun.md
docs/developers/functions/debug/: DbgValFromString.md  DbgValSetBuffer.md  DbgValSetScalar.md  DbgValToString.md  index.rst
docs/introduction/: Expression-functions.md  Formatting.md  Values.md
src/bridge/: _global.cpp  _global.h  bridgemain.cpp  bridgemain.h  startupargs.h
src/cross/: CMakeLists.txt  cmake.toml
src/cross/ElfBug/: CMakeLists.txt
src/cross/ElfBug/ElfBug/: CMakeLists.txt
src/cross/ElfBug/ElfBug/api/: elfbug_api.cpp  elfbug_api.h
src/cross/ElfBug/ElfBug/core/: Debugger.Loop.Process.cpp  Debugger.Loop.Signal.cpp  Debugger.Loop.Thread.cpp  Debugger.Loop.cpp  Debugger.cpp  Debugger.h
src/cross/ElfBug/ElfBug/process/: Breakpoint.cpp  Memory.cpp  Process.cpp  Process.h  ProcessArch.cpp  ProcessArch.h
src/cross/ElfBug/ElfBug/thread/: HardwareBreakpoint.cpp  Registers.cpp  Registers.h  Thread.cpp  Thread.h
src/cross/ElfBug/ElfBug/types/: Breakpoint.h  ElfBug.h  Global.h
src/cross/ElfBug/tests/: CMakeLists.txt  SymbolHelper.h  TestHarness.h  cmake.toml  tests.cpp
src/cross/debugger/: CMakeLists.txt  Dockerfile  README.md  build-appimage.sh  main.cpp
src/cross/debugger/core/: DbgAdapter.cpp  DbgAdapter.h  ElfBugLoader.h  LinuxArchitecture.h
src/cross/debugger/gui/: CPUStack.cpp  CPUStack.h  MainWindow.cpp  MainWindow.h
src/cross/debugger/resources/: icons  rc
src/cross/hex_viewer/: PatternLanguage.cpp
src/cross/minidump/: FileParser.cpp  FileParser.h  MainWindow.cpp  MainWindow.h  MiniThreads.cpp  MiniThreads.h
src/cross/remote_table/: RemoteTable.cpp
src/cross/widgets/: Bridge.cpp  Bridge.h  CMakeLists.txt  Configuration.cpp  Imports.h  MiscUtil.h  Qt.cmake  RegisterContext.h  StringUtil.cpp  StringUtil.h  Types.h
src/cross/x64dbg-linux/: CMakeLists.txt  Dockerfile  README.md  build-appimage.sh  build-docker.sh  build-release.sh  cmake.toml
src/cross/x64dbg-linux/core/: DbgAdapter.cpp  DbgAdapter.h  ExceptionHandler.cpp  ExceptionHandler.h  HardwareBreakpointManager.cpp  HardwareBreakpointManager.h  LinuxArchitecture.h  LinuxThreadManager.cpp  LinuxThreadManager.h  MemoryBreakpointManager.cpp  MemoryBreakpointManager.h  SymbolProvider.cpp  SymbolProvider.h
src/cross/x64dbg-linux/gui/: BreakpointsView.cpp  BreakpointsView.h  CPUStack.cpp  CPUStack.h  CallStackView.cpp  CallStackView.h  MainWindow.cpp  MainWindow.h  MemoryMapView.cpp  MemoryMapView.h  SymbolsView.cpp  (+3 more)
src/dbg/: TraceRecord.cpp  TraceRecord.h  _exports.cpp  _exports.h  _plugins.cpp  _scriptapi_flag.cpp  args.h  breakpoint.cpp  debugger.cpp  debugger.h  debugger_tracing.h  exception.cpp  exhandlerinfo.cpp  expressionparser.cpp  exprfunc.cpp  filemap.h  main.cpp  memory.cpp  module.cpp  module.h  patches.cpp  patternfind.cpp  patternfind.h  pdbdiafile.cpp  pdbdiafile.h  pdbdiatypes.h  plugin_loader.cpp  plugin_loader.h  reference.cpp  simplescript.cpp  simplescript.h  symbolinfo.cpp  symbolsourcebase.h  symbolsourcedia.cpp  taskthread.h  testing.cpp  testing.h  types.h  value.cpp  value.h  (+1 more)
src/dbg/TitanEngine/: TitanEngine.def  TitanEngine.h  TitanEngine_x64.lib  TitanEngine_x86.lib
src/dbg/commands/: cmd-breakpoint-control.cpp  cmd-debug-control.cpp  cmd-general-purpose.cpp  cmd-memory-operations.cpp  cmd-misc.cpp  cmd-script.cpp  cmd-searching.cpp  cmd-tracing.cpp
src/dbg/msdia/: dia2.h
src/dbg/ntdll/: ntdll.h
src/exe/: signaturecheck.cpp  signaturecheck.h  x64dbg_exe.cpp
src/gui/Src/: main.cpp
src/headless/: headless.cpp  signaturecheck.cpp
src/test/issue3808/: CMakeLists.txt  README.md  flagrepro.cpp  run_repro.py  target.cpp
src/tests/: CMakeLists.txt  README.md  run.py
src/tests/cmdline_init/: CMakeLists.txt  README.md  plugin.cpp  target.cpp  test.txt
src/tests/cmdline_setcommandline/: CMakeLists.txt  README.md  plugin.cpp  test.txt
src/tests/guard_page/: CMakeLists.txt  README.md  plugin.cpp  target.cpp  test.txt
src/tests/issue3803/: CMakeLists.txt  README.md  plugin.cpp  target.cpp  test.txt
src/tests/issue3808/: CMakeLists.txt  README.md  flagrepro.cpp  plugin.cpp  test.txt
src/tests/membp/: CMakeLists.txt  README.md  issue.txt  plugin.cpp  target.cpp  test.exitprocess-assert.txt  test.range-access-execute.txt  test.range-access-read.txt  test.range-access-write.txt  test.range-adjacent-cross-page-read.txt  test.range-callback-add.txt  test.range-callback-delete.txt  test.range-cross-page-read.txt  test.range-cross-page-write.txt  test.range-delete.txt  test.range-execute-ignore-read.txt  test.range-execute-ignore-write.txt  test.range-execute.txt  test.range-heap.txt  test.range-multithread-read.txt  test.range-read-ignore-execute.txt  test.range-read-ignore-write.txt  test.range-read.txt  test.range-reenable.txt  test.range-reinit.txt  test.range-repeat-execute.txt  test.range-repeat-read.txt  test.range-same-page-delete-one.txt  test.range-singleshot-execute.txt  test.range-singleshot-read.txt  test.range-stress-access.txt  test.range-three-page-read.txt  test.range-write-ignore-execute.txt  test.range-write-ignore-read.txt  test.range-write.txt  test.txt  test.write.txt
src/tests/random_dll/: CMakeLists.txt  README.md  plugin.cpp  target.cpp  test.disabled.txt  test_dll.cpp
src/tests/script_run_exit/: CMakeLists.txt  test.multi-session.txt  test.txt
src/tests/scriptcmd_call/: CMakeLists.txt  plugin.cpp  target.cpp  test.fastresume-nested.txt  test.fastresume.txt  test.plugin-direct-fastresume.txt  test.plugin-direct.txt  test.txt
src/tests/scriptcmd_call_threads/: CMakeLists.txt  target.cpp  test.txt
src/zydis_wrapper/Zydis/: Zydis.h
(+83 files in other folders)
